--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,83 @@
     transform: rotate(360deg);
   }
 }
+table {
+  height:500px;
+  font-family: arial, sans-serif;
+ background-color: white;
+  width:100%;
+}
+/* tbody{
+  width: 100%;
+  height: 20px;
+  overflow-y: scroll;    
+    overflow-x: hidden; 
+}
+thead th {
+  position: sticky; 
+  top: 0px; 
+  color:white;
+  background-color: grey;
+}
+td, th {
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+  width:50%;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+} 
+ */
+
+
+/* thead, tbody { display: block; }
+tbody {
+    height: 200px;       
+    overflow-y: auto;    
+    overflow-x: hidden; 
+} */
+/* tbody, thead {
+  display: block;
+} 
+tbody {
+  height: 00px; 
+  overflow-y: auto;
+  overflow-x: hidden; 
+} */
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+.tableFixHead {
+  overflow-y: auto; 
+  height: 350px; 
+}
+.tablexHead {
+  overflow-y: auto; 
+  height: 550px; 
+}
+thead th {
+  position: sticky; 
+  top: 0px; 
+  color:white;
+  background-color: grey;
+}
+table {
+  border-collapse: no-collapse; 
+  width: 100%;
+}
+td,th{
+  height:50px;
+}
+
+
+.active{
+  background-color: black;
+  color:white;
+}
+.non-active{
+  background-color: white;
+  color:black;
+  border-radius:5px;
+}
